--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .del{
     font-size: 0.7rem;
+}
+.hero-sec {
+    /* border: 1px solid black; */
+    height: 300px;
+    width: 100%;
+    position: relative; /* Changed from absolute to relative */
+    /* margin-top: 10%; Adjust top margin as needed */
+    overflow: hidden; /* Ensure no overflow */
+}
+
+.hero-sec img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the div */
+    object-position: center; /* Center the image */
+}
+
+
+.hero-sec img {
+    width: 100%;
+    height: 110%;
+    object-fit: cover; /* Ensure the image covers the div */
+    object-position: center; /* Center the image */
+}
+.collect{
+    /* border: 1px solid black; */
+    height: 300px;
+    width: 100%;
+    position: relative;
+    top: 51%;
+    overflow: hidden; /* Ensure no overflow */
+}
+.collect img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the div */
+    object-position: center; /* Center the image */
+}
+.card-img-top {
+    width: 50% !important;
+    padding: 10px 30px !important;
+    margin: 9px 77px;
 }
