--- a/style.css
+++ b/style.css
@@ -1,51 +1,100 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.del{
+.del {
     font-size: 0.7rem;
 }
+
 .hero-sec {
     /* border: 1px solid black; */
     height: 300px;
     width: 100%;
-    position: relative; /* Changed from absolute to relative */
+    position: relative;
+    /* Changed from absolute to relative */
     /* margin-top: 10%; Adjust top margin as needed */
-    overflow: hidden; /* Ensure no overflow */
+    overflow: hidden;
+    /* Ensure no overflow */
 }
 
 .hero-sec img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure the image covers the div */
-    object-position: center; /* Center the image */
+    object-fit: cover;
+    /* Ensure the image covers the div */
+    object-position: center;
+    /* Center the image */
 }
 
 
 .hero-sec img {
     width: 100%;
     height: 110%;
-    object-fit: cover; /* Ensure the image covers the div */
-    object-position: center; /* Center the image */
+    object-fit: cover;
+    /* Ensure the image covers the div */
+    object-position: center;
+    /* Center the image */
 }
-.collect{
+
+.collect {
     /* border: 1px solid black; */
     height: 300px;
     width: 100%;
     position: relative;
     top: 51%;
-    overflow: hidden; /* Ensure no overflow */
+    overflow: hidden;
+    /* Ensure no overflow */
 }
+
 .collect img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure the image covers the div */
-    object-position: center; /* Center the image */
+    object-fit: cover;
+    /* Ensure the image covers the div */
+    object-position: center;
+    /* Center the image */
 }
+
 .card-img-top {
     width: 50% !important;
     padding: 10px 30px !important;
     margin: 9px 77px;
+}
+
+.button {
+    width: 180px;
+    height: 40px;
+    background-image: linear-gradient(rgb(214, 202, 254), rgb(158, 129, 254));
+    border: none;
+    border-radius: 50px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
+    box-shadow: 1px 3px 0px rgb(139, 113, 255);
+    transition-duration: .3s;
+}
+
+.cartIcon {
+    width: 14px;
+    height: fit-content;
+}
+
+.cartIcon path {
+    fill: white;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.button:active {
+    transform: translate(2px, 0px);
+    box-shadow: 0px 1px 0px rgb(139, 113, 255);
+    padding-bottom: 1px;
 }
